[package]
name = "family_tree_backend"
version = "0.1.0"
authors = ["Aln Ryan <alan@codecrunchers.ie>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
rusted_cypher = { git="https://github.com/codecrunchers/rusted-cypher.git", branch="add_graph_response"} 
lazy_static = "1.4.0" 

